--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -26,6 +26,8 @@
 		<dependency>
     <groupId>org.springframework.integration</groupId>
     <artifactId>spring-integration-ip</artifactId>
+        <version>5.3.0.RELEASE</version>
+    
 </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
